# testtrash

./: #UnitKoibScan.cpp#  AlteraSocket.cpp  AlteraSocket.h  CMakeLists.txt  CreateImage.cpp  CreateImage.h  Detect.cpp  Detect.h  HardProc.cpp  HardProc.h  HeaderMain.h  InitAltera.cpp  InitAltera.h  InitAltera_altButtons.cpp  MakeTeX-L.cpp  MakeTeX-L.h  MyX.cpp  MyX.h  Ruler.cpp  Ruler.h  UnitKoibScan.cpp  UnitKoibScan.h  UnitServiceMenu.cpp  UnitServiceMenu.h  angstrom.cmake  cr_BMP.cpp  cr_BMP.h  i2c-dev_user.h  main.cpp  mv_tsu_ioctl.h  printer.cpp  printer.h  sourcedatafind.sh  supp.cpp  supp.h  usb.cpp  usb.h
Log/: TCPlog.txt
Protokols/: Protokols.XML
SetUpFiles/: .goutputstream-DBWUYW  MainEnglish.dat~  MainRussian.dat~  MainRussian1.dat~  NewSWMessage.dat~  SetUpRecPar0.dat~  VotesRussian.dat~
SetUpFiles/Ind/: .goutputstream-NROYZW  MainEnglish0.dat~  MainRussian0.dat~  MenuRussian.dat~  MenuRussian1.dat~  MonthsRussian.dat~
SetUpFiles/Pr/: Pr_Ch_Russian.dat~  Pr_ID_Russian.dat~  Pr_IP_Russian.dat~  Pr_Rezult_Russian.dat~  Pr_Test_Russian.dat~
SetUpFiles/Voice/: VoiceRussian0.dat~  VoiceRussian_Months.dat~
SourceDir/: SourceData.XML
Tex/: Pr_ID.tex  Pr_Rezult.tex  Pr_Test.tex
Wav/: Russian.txt
XProtokols/: 1.XML
